@@ -1,3 +1,8 @@
+2023-08-26  Karl Berry  <karl@freefriends.org>
+
+	* writet1.c (t1_builtin_enc): sync change from pdftexdir/writet1.c
+	(r68069).
+
 2023-08-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* beginfontk1.test, eepic-nan.test, pfbincl.test, same-name.test,
